@@ -1,41 +1,43 @@
 package fi.uef.cs.petrn.riot_rxjava_test;
 
+import com.google.gson.annotations.Expose;
 import com.google.gson.annotations.SerializedName;
 
-/**
- * Created by Petri on 25.12.2017.
- */
-
 public class Summoner {
-    @SerializedName("profileIconId")
-    private int profileIconId;
-    @SerializedName("name")
-    private String name;
-    @SerializedName("summonerLevel")
-    private long summonerLevel;
-    @SerializedName("revisionDate")
-    private long revisionDate;
+
     @SerializedName("id")
+    @Expose
     private long id;
     @SerializedName("accountId")
+    @Expose
     private long accountId;
+    @SerializedName("name")
+    @Expose
+    private String name;
+    @SerializedName("profileIconId")
+    @Expose
+    private int profileIconId;
+    @SerializedName("revisionDate")
+    @Expose
+    private long revisionDate;
+    @SerializedName("summonerLevel")
+    @Expose
+    private long summonerLevel;
 
-    public Summoner(int profileIconId, String name, long summonerLevel, long revisionDate, long id, long accountId) {
-        this.profileIconId = profileIconId;
-        this.name = name;
-        this.summonerLevel = summonerLevel;
-        this.revisionDate = revisionDate;
+    public long getId() {
+        return id;
+    }
+
+    public void setId(long id) {
         this.id = id;
+    }
+
+    public long getAccountId() {
+        return accountId;
+    }
+
+    public void setAccountId(long accountId) {
         this.accountId = accountId;
-    }
-
-
-    public int getProfileIconId() {
-        return profileIconId;
-    }
-
-    public void setProfileIconId(int profileIconId) {
-        this.profileIconId = profileIconId;
     }
 
     public String getName() {
@@ -46,12 +48,12 @@ public class Summoner {
         this.name = name;
     }
 
-    public long getSummonerLevel() {
-        return summonerLevel;
+    public long getProfileIconId() {
+        return profileIconId;
     }
 
-    public void setSummonerLevel(long summonerLevel) {
-        this.summonerLevel = summonerLevel;
+    public void setProfileIconId(int profileIconId) {
+        this.profileIconId = profileIconId;
     }
 
     public long getRevisionDate() {
@@ -62,23 +64,12 @@ public class Summoner {
         this.revisionDate = revisionDate;
     }
 
-    public long getId() {
-        return id;
+    public long getSummonerLevel() {
+        return summonerLevel;
     }
 
-    public void setId(long id) {
-        this.id = id;
+    public void setSummonerLevel(long summonerLevel) {
+        this.summonerLevel = summonerLevel;
     }
-
-
-    public long getAccountId() {
-        return accountId;
-    }
-
-    public void setAccountId(long accountId) {
-        this.accountId = accountId;
-    }
-
-
 
 }
